--- a/EthereumFuturePriceRNNClassifier-TuningHyperParameters.ipynb
+++ b/EthereumFuturePriceRNNClassifier-TuningHyperParameters.ipynb
@@ -318,7 +318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3a3498e66cc4065b62c00155e964a48",
+       "model_id": "b1cfe46931174edc9965146599262f90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2099,30 +2099,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of models: 1\n"
+      "Number of models: 64\n"
      ]
     }
    ],
    "source": [
     "EPOCHS = 10\n",
     "\n",
-    "# # tuning hyper-parameters\n",
-    "# lstm_layers = [2]\n",
-    "# layer_sizes = [64] \n",
-    "# dense_layers = [1,2]\n",
-    "# batch_sizes = [64,128]\n",
-    "# dropouts = [0.2,0.25]\n",
-    "# optimizers = [Adam]\n",
-    "# learning_rates = [1e-3,1e-4]\n",
-    "# decays = [1e-6,1e-7]\n",
-    "# loss_functions = ['sparse_categorical_crossentropy']\n",
+    "# tuning hyper-parameters\n",
+    "lstm_layers = [2]\n",
+    "layer_sizes = [64] \n",
+    "dense_layers = [1,2]\n",
+    "batch_sizes = [64,128]\n",
+    "dropouts = [0.2,0.25]\n",
+    "optimizers = [Adam]\n",
+    "learning_rates = [1e-3,1e-4]\n",
+    "decays = [1e-6,1e-7]\n",
+    "loss_functions = ['sparse_categorical_crossentropy']\n",
     "\n",
     "###\n",
     "# use best model hyper parameters, to speed up training time \n",
@@ -2135,15 +2135,15 @@
     "# Test Accuracy:0.5744364843925938\n",
     "###    \n",
     "\n",
-    "lstm_layers = [2]\n",
-    "layer_sizes = [128] \n",
-    "dense_layers = [1]\n",
-    "batch_sizes = [64]\n",
-    "dropouts = [0.2]\n",
-    "optimizers = [Adam]\n",
-    "learning_rates = [1e-4]\n",
-    "decays = [1e-6]\n",
-    "loss_functions = ['sparse_categorical_crossentropy']\n",
+    "# lstm_layers = [2]\n",
+    "# layer_sizes = [128] \n",
+    "# dense_layers = [1]\n",
+    "# batch_sizes = [64]\n",
+    "# dropouts = [0.2]\n",
+    "# optimizers = [Adam]\n",
+    "# learning_rates = [1e-4]\n",
+    "# decays = [1e-6]\n",
+    "# loss_functions = ['sparse_categorical_crossentropy']\n",
     "\n",
     "number_of_models = len(lstm_layers) \\\n",
     "                    *len(layer_sizes) \\\n",
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -2192,31 +2192,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*Model 1/1*\n",
-      "exch-gemini-predict-gemini_ETHUSD_Close-lookback-100-future-5-lstm-2-nodes-128-dense-1-batch-64-dropout-0.2-optimizer-<class 'tensorflow.python.keras.optimizers.Adam'>-lr-0.0001-decay-1e-06\n",
+      "*Model 1/64*\n",
+      "exch-gemini-predict-gemini_ETHUSD_Close-lookback-100-future-5-lstm-2-nodes-64-dense-1-batch-64-dropout-0.2-optimizer-<class 'tensorflow.python.keras.optimizers.Adam'>-lr-0.001-decay-1e-06\n",
       "Train on 240418 samples, validate on 11446 samples\n",
       "Epoch 1/10\n",
-      "240418/240418 [==============================] - 64s 267us/step - loss: 0.7263 - acc: 0.5178 - val_loss: 0.6915 - val_acc: 0.5235\n",
-      "Epoch 2/10\n",
-      "240418/240418 [==============================] - 64s 266us/step - loss: 0.6932 - acc: 0.5309 - val_loss: 0.6872 - val_acc: 0.5464\n",
-      "Epoch 3/10\n",
-      "240418/240418 [==============================] - 64s 266us/step - loss: 0.6869 - acc: 0.5457 - val_loss: 0.6832 - val_acc: 0.5605\n",
-      "Epoch 4/10\n",
-      "240418/240418 [==============================] - 62s 256us/step - loss: 0.6838 - acc: 0.5544 - val_loss: 0.6803 - val_acc: 0.5663\n",
-      "Epoch 5/10\n",
-      "240418/240418 [==============================] - 62s 257us/step - loss: 0.6816 - acc: 0.5609 - val_loss: 0.6827 - val_acc: 0.5615\n",
-      "Epoch 6/10\n",
-      "240418/240418 [==============================] - 62s 257us/step - loss: 0.6797 - acc: 0.5651 - val_loss: 0.6792 - val_acc: 0.5684\n",
-      "Epoch 7/10\n",
-      "240418/240418 [==============================] - 62s 258us/step - loss: 0.6779 - acc: 0.5696 - val_loss: 0.6800 - val_acc: 0.5690\n",
-      "Epoch 8/10\n",
-      "240418/240418 [==============================] - 62s 257us/step - loss: 0.6763 - acc: 0.5722 - val_loss: 0.6803 - val_acc: 0.5611\n",
-      "Epoch 9/10\n",
-      "240418/240418 [==============================] - 62s 256us/step - loss: 0.6745 - acc: 0.5776 - val_loss: 0.6790 - val_acc: 0.5712\n",
-      "Epoch 10/10\n",
-      "240418/240418 [==============================] - 63s 260us/step - loss: 0.6726 - acc: 0.5803 - val_loss: 0.6826 - val_acc: 0.5527\n",
-      "Test Loss:0.682578532039213\n",
-      "Test Accuracy:0.5526821596543731\n"
+      "176448/240418 [=====================>........] - ETA: 14s - loss: 0.6980 - acc: 0.5263"
      ]
     }
    ],
